Add flexbox to filter-options

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,8 @@ nav h1 a {
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+	display: flex;
+	justify-content: center;
 }
 .filter-options h2 {
   color: white;
