--- a/css/styles.css
+++ b/css/styles.css
@@ -70,13 +70,21 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  padding: 10px 40px 16px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 17px;
+  margin: 0;
+  width: calc(50% - 80px);
 }
+
+@media screen and (max-width: 414px) {
+	nav h1 a {
+		font-weight: 100;
+		letter-spacing: 1.4vw;
+	}
+}
+
 
 /* Display list items side by side */
 #breadcrumb li {
