Add media query for filter options on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,12 @@ nav h1 a {
   width: 200px;
 }
 
+@media screen and (max-width: 414px) {
+	.filter-options h2 {
+		display: none;
+	}
+}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
 	display: flex;
