--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
 	width: auto;
@@ -266,6 +266,7 @@ nav h1 a {
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
+	box-sizing: border-box;
 }
 #reviews-container {
   padding: 30px 40px 80px;
