--- a/css/styles.css
+++ b/css/styles.css
@@ -289,22 +289,30 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 0 0 20px;
   position: relative;
-  width: 85%;
+  width: 100%;
+	border-radius: 28px 0;
 }
 #reviews-list li p {
+	position: relative;
   margin: 0 0 10px;
+	padding: 0 16px;
 }
 #reviews-list li p:nth-of-type(-n+2) {
 	background-color: #333333;
 	display: inline-block;
-	width: 45%;
-	color: grey;
-	padding: 10px 0 10px 8px;
+	padding: 10px 16px;
+	box-sizing: border-box;
 }
 #reviews-list li p:first-child {
+	width: 40%;
 	color: #FFFFFF;
+}
+#reviews-list li p:nth-child(2) {
+	width: 60%;
+	color: grey;
+	text-align: right;
 }
 #reviews-list li p:nth-child(3) {
 	background-color: #FFA500;
@@ -312,6 +320,8 @@ nav h1 a {
 	color: #FFF;
 	display: inline-block;
 	padding: 0 8px;
+	margin-left: 15px;
+	font-size: 0.8em;
 }
 #restaurant-hours td {
   color: #666;
