--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
+	border-radius: 28px 0;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -259,7 +260,7 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
