--- a/css/styles.css
+++ b/css/styles.css
@@ -171,14 +171,16 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+	border-radius: 28px;
+	text-align: center;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
-  margin: 0;
-  max-width: 100%;
+  margin: 0 -30px;
   min-height: 248px;
-  min-width: 100%;
+  width: calc(100% + 60px);
+	border-radius: 28px 28px 0 0;
 }
 #restaurants-list li h1 {
   color: #f18200;
