--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px 0;
+  padding: 25px 20px;
+	box-sizing: border-box;
   text-align: center;
   text-transform: uppercase;
 	width: auto;
@@ -353,7 +354,7 @@ nav h1 a {
 	}
 
 	.inside #maincontent {
-		position: absolute;
+		position: relative;
 	}
 	#restaurant-container, #reviews-container {
 		position: relative;
