--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #DCDCDC;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px 20px;
@@ -121,7 +121,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 50px;
-  background-color: #3397DB;
+  background-color: #435784;
   align-items: center;
 	display: flex;
 	justify-content: center;
@@ -135,7 +135,6 @@ nav h1 a {
 }
 .filter-options select {
   background-color: white;
-  border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 11pt;
   height: 35px;
@@ -143,7 +142,13 @@ nav h1 a {
   margin: 10px;
   padding: 0 10px;
   width: 200px;
+	outline: none;
 }
+.filter-options select:focus {
+	border: 3px solid #FFA500;
+	box-shadow: 0 0 10px #FFA500;
+}
+
 
 @media screen and (max-width: 414px) {
 	.filter-options h2 {
@@ -315,7 +320,7 @@ nav h1 a {
 }
 #reviews-list li p:nth-child(2) {
 	width: 70%;
-	color: grey;
+	color: #D3D3D3;
 	text-align: right;
 	font-size: 0.8em;
 	padding-top: 13px;
