--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-transform: uppercase;
 	width: auto;
 }
+#footer a:focus {
+	outline: none;
+	border: 2px solid #FFA500;
+}
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
@@ -70,6 +75,10 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+	outline: none;
+}
+nav h1 a:focus {
+	border: 1px solid #FFA500;
 }
 #breadcrumb {
   padding: 10px 40px 16px;
